--- a/css/cover.css
+++ b/css/cover.css
@@ -6,7 +6,7 @@
 a,
 a:focus,
 a:hover {
-  color: #fff;
+  color: #000;
 }
 
 /* Custom default button */
@@ -27,13 +27,23 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #FF5050
+  background-color: #FFFFFF
 }
 body {
-  color: #fff;
+  color: #000;
   text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
+  /*text-shadow: 0 1px 1px rgba(0,0,0,.5);*/
 }
+
+a {
+  color: #000;
+}
+
+p {
+  color: #000;
+}
+
+
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
