--- a/css/cover.css
+++ b/css/cover.css
@@ -105,14 +105,14 @@ p {
   border-bottom-color: #fff;
 }
 
-@media (min-width: 768px) {
+/*@media (min-width: 768px) {
   .masthead-brand {
     float: left;
   }
   .masthead-nav {
     float: right;
   }
-}
+}*/
 
 
 /*
